kube/cert-manager-stuff/azure-stuff/azure-hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-azure-dns
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/tls-acme: “true” #took me AGES to figure out THIS annotation
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #we did this so that the healthchecks against /healthz get rerouted to the path being served
spec:
  tls:
  - hosts:
    - akshello.boopablesnoot.click
    - home.boopablesnoot.click
    secretName: wildcard-az-tls2
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80      
---
